--- a/assets/armor_trims/lang/ru_ru.json
+++ b/assets/armor_trims/lang/ru_ru.json
@@ -2,7 +2,7 @@
   "advancements.armor_trims.trim_with_any_armor_pattern.title": "С чистого литья",
   "advancements.armor_trims.trim_with_any_armor_pattern.description": "Добавьте отделку на броню на столе кузнеца",
   "advancements.adventure.trim_with_all_armor_patterns.title": "Кузнец своего стиля",
-  "advancements.adventure.trim_with_all_armor_patterns.description": "Хотя бы раз используйте шаблоны: «Шпиль», «Рыло», «Ребро», «Хранитель», «Тишина», «Вредина», «Прилив» и «Искатель»",
+  "advancements.adventure.trim_with_all_armor_patterns.description": "Хотя бы раз используйте кузнечные шаблоны: Орнамент «Берег», «Дюна», «Око», «Ребро», «Страж», «Тишина», «Рыло», «Шпиль», «Прилив», «Вредина», «Хранитель» и «Заросли». Орнаменты «Вождь», «Сборщик», «Скульптор» и «Искатель» не учитываются в достижении.",
   "item.armor_trims.smithing_template": "Кузнечный шаблон",
   "trims.armor_trims.coast": "Орнамент «Берег»",
   "trims.armor_trims.dune": "Орнамент «Дюна»",
